--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,3 +28,15 @@ jobs:
           node-version: 16
       - run: npm ci
       - run: npm test
+
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "expres-app" #Must be unique in Heroku
+          heroku_email: "inbox.ahmad.a@gmail.com"
